--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
 :root{
-    --mainFont: #645aee;
-    --secondaryFont: #4e42f5;
+    --mainFont: #3F51B5;
+    --secondaryFont: #1f3ad6;
+    --button: #1537F2;
     --white: #ffffff;
 }
 
@@ -11,6 +13,27 @@ body {
 }
 
 body {
+    overflow: hidden;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+}
+
+.bodyOnAll, .bodyWidth{
+    transition: all ease-out 0.3s;
+    -webkit-transition: all ease-out 0.3s;
+    -moz-transition: all ease-out 0.3s;
+    -ms-transition: all ease-out 0.3s;
+    -o-transition: all ease-out 0.3s;
+}
+
+.bodyOnAll{
+    margin-left: 350px;
+}
+
+.bodyWidth{
+    margin-left: 120px;
+}
+
+.OnLoginRegisterBody{
+    margin: 0;
 }
