--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,55 @@
-<div class="sidenav">
-    
+<div id="sideNav" class="sideNav" [class.close]="classToggled" *ngIf="(router.url !== '/login' && router.url !== '/register')">
+    <div class="header">
+        <img class="logo" src="../assets/favicon.png" alt="Logo of SureService">
+        <h1>SureService</h1>
+        <button id="toggle" class="button" mat-mini-fab color="success" aria-label="Toggle sidebar" (click)="toggleBar()">
+            <mat-icon>keyboard_arrow_right</mat-icon>
+        </button>
+    </div>
+
+    <div class="navLinks">
+        <div class="nav">
+            <div class="link">
+                <mat-icon>home</mat-icon>
+                <h2>Home</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="navLinks">
+        <div class="nav">
+            <div class="link">
+                <mat-icon>person</mat-icon>
+                <h2>Profile</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="navLinks">
+        <div class="nav">
+            <div class="link">
+                <mat-icon>work</mat-icon>
+                <h2>Services</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="navLinks">
+        <div class="nav">
+            <div class="link">
+                <mat-icon>settings</mat-icon>
+                <h2>Settings</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="navLinks bottom">
+        <div class="nav">
+            <div class="link" [routerLink]="'/login'">
+                <mat-icon>logout</mat-icon>
+                <h2>Log-out</h2>
+            </div>
+        </div>
+    </div>
 </div>
+<router-outlet></router-outlet>
