--- a/src/app/login/pages/login/login.component.css
+++ b/src/app/login/pages/login/login.component.css
@@ -3,11 +3,17 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
-    height: 100vh;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(0,166,255,1) 0%, rgba(49,76,228,1) 50%, rgba(21,55,242,1) 100%);
+    box-sizing: border-box;
+    overflow: auto
 }
 
 
 .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 50%;
     margin: 0 auto;
     height: 80%;
@@ -18,7 +24,8 @@
     -moz-border-radius: 10%;
     -ms-border-radius: 10%;
     -o-border-radius: 10%;
-    position: relative;
+    box-sizing: border-box;
+    overflow: auto
 }
 
 /*right*/
@@ -29,14 +36,6 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
 }
 
 .form h1 {
@@ -142,6 +141,11 @@
     width: 2rem;
     height: 2rem;
     background-color: var(--white);
+    transition: all ease-out 0.2s;
+    -webkit-transition: all ease-out 0.2s;
+    -moz-transition: all ease-out 0.2s;
+    -ms-transition: all ease-out 0.2s;
+    -o-transition: all ease-out 0.2s;
 }
 
 .leftarrow{
@@ -211,14 +215,35 @@
     background-color: var(--white);
 }
 
+/*media query*/
 
-/*Background*/
-.something {
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    background: rgb(21,55,242);
-    background: linear-gradient(90deg, rgba(0,166,255,1) 0%, rgba(49,76,228,1) 50%, rgba(21,55,242,1) 100%);
+@media (max-width: 1350px) {
+    .left-side{
+        display: none;
+    }
+
+    .container{
+        width: 80%;
+    }
+}
+
+@media (max-width: 850px) {
+    .form h1 {
+        font-size: 2rem;
+    }
+
+    .formField{
+        grid-template-columns: repeat(1,1fr);
+        width: auto;
+    }
+
+    .container{
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        -ms-border-radius: 0;
+        -o-border-radius: 0;
+    }
 }
