--- a/src/app/register/pages/register/register.component.css
+++ b/src/app/register/pages/register/register.component.css
@@ -1,12 +1,18 @@
-.page{
+.page {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
-    height: 100vh;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(21, 55, 242, 1) 0%, rgba(49, 76, 228, 1) 50%, rgba(0, 166, 255, 1) 100%);
+    box-sizing: border-box;
+    overflow: auto
 }
 
 .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
     width: 50%;
     height: 80%;
@@ -17,7 +23,8 @@
     -moz-border-radius: 10%;
     -ms-border-radius: 10%;
     -o-border-radius: 10%;
-    position: relative;
+    box-sizing: border-box;
+    overflow: auto
 }
 
 /*right*/
@@ -27,14 +34,6 @@
     flex-direction: column;
     align-items: center;
     padding: 2rem 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
 }
 
 .form h1 {
@@ -43,11 +42,11 @@
     text-align: center;
 }
 
-.formField{
+.formField {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     column-gap: 2rem;
-    width: 50rem;
+    width: 40rem;
 }
 
 .form mat-form-field:hover {
@@ -62,7 +61,8 @@
     width: 8rem;
 }
 
-.loginprofile, .logo{
+.loginprofile,
+.logo {
     transition: all ease-out 0.3s;
     -webkit-transition: all ease-out 0.3s;
     -moz-transition: all ease-out 0.3s;
@@ -70,7 +70,8 @@
     -o-transition: all ease-out 0.3s;
 }
 
-.loginprofile:hover, .logo:hover{
+.loginprofile:hover,
+.logo:hover {
     transform: scale(1.07);
     -webkit-transform: scale(1.07);
     -moz-transform: scale(1.07);
@@ -84,16 +85,16 @@
 }
 
 /*register */
-.goregister{
+.goregister {
     margin-top: 3rem;
 }
 
-.goregister span{
+.goregister span {
     font-weight: 700;
     text-decoration: underline;
 }
 
-.goregister span:hover{
+.goregister span:hover {
     cursor: pointer;
     color: var(--secondaryFont);
 }
@@ -134,18 +135,18 @@
     -o-transition: all ease-out 0.3s;
 }
 
-.button2{
+.button2 {
     background-color: #ffffff;
     color: #000;
 }
 
-.button2:hover{
+.button2:hover {
     background-color: #ffffff;
 }
 
 /*left*/
 
-.left-side{
+.left-side {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -154,12 +155,12 @@
     text-align: center;
 }
 
-.left-side h1{
+.left-side h1 {
     font-size: 3rem;
     margin: 0;
 }
 
-.left-side p{
+.left-side p {
     font-size: 1.3rem;
 }
 
@@ -168,13 +169,39 @@
     height: 10rem;
 }
 
-/*Background*/
-.something {
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    background: rgb(21,55,242);
-    background: linear-gradient(90deg, rgba(21,55,242,1) 0%, rgba(49,76,228,1) 50%, rgba(0,166,255,1) 100%);
+
+/*media query*/
+
+@media (max-width: 1350px) {
+    .left-side {
+        display: none;
+    }
+
+    .container {
+        width: 80%;
+        height: 80%;
+    }
+}
+
+@media (max-width: 850px) {
+    .form h1 {
+        font-size: 2rem;
+    }
+
+    .formField {
+        grid-template-columns: repeat(1, 1fr);
+        width: auto;
+    }
+
+    .container {
+        padding: 1rem 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        -ms-border-radius: 0;
+        -o-border-radius: 0;
+    }
 }
